--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "types": ["node", "express", "passport"]
   },
   "include": ["src/**/*.ts", 
     "src/**/*.d.ts" ], // <-- MUY IMPORTANTE: Incluye todos los .ts en src
